--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello world !</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <h1 class="demo">hello world</h1>
+    <p>This is the first file in my new git Repo.</p>
+    <p>new line in our file!</p>
 </body>
 </html>
