--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div><img src="img_hello_world.jpg" alt="Hello world from space" style="width:100%;max-width:960px"></div>
     <p>This is the first file in my new git Repo.</p>
     <p>new line in our file!</p>
+    <div><img src="img_hello_git.jpg" alt="hello git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
